# unifly

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  install.sh  justfile
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cicd.yml  docs.yml  e2e.yml  release.yml
crates/unifly/: Cargo.toml
crates/unifly-api/: Cargo.toml
crates/unifly-api/openapi/: 10.1.84.json
crates/unifly-api/src/: auth.rs  config.rs  controller.rs  convert.rs  core_error.rs  error.rs  lib.rs  transport.rs  websocket.rs
crates/unifly-api/src/command/: mod.rs  requests.rs
crates/unifly-api/src/command/requests/: dns.rs  network.rs  policy.rs  ports.rs  traffic.rs  vouchers.rs  vpn.rs
crates/unifly-api/src/controller/: legacy_queries.rs  lifecycle.rs  payloads.rs  ports.rs  query.rs  refresh.rs  runtime.rs  session_queries.rs  subscriptions.rs  support.rs
crates/unifly-api/src/controller/commands/: device_client.rs  mod.rs  network.rs  policy.rs  system.rs  vpn.rs
crates/unifly-api/src/controller/commands/policy/: acl.rs  dns.rs  firewall.rs  firewall_groups.rs  mod.rs  nat.rs  traffic_lists.rs
crates/unifly-api/src/controller/payloads/: acl.rs  dns.rs  network.rs  traffic.rs
crates/unifly-api/src/controller/query/: inventory.rs  reference.rs
crates/unifly-api/src/convert/: client.rs  device.rs  dns.rs  event.rs  firewall.rs  helpers.rs  interface.rs  mod.rs  nat.rs  network.rs  site.rs  supporting.rs  wifi.rs
crates/unifly-api/src/integration/: client.rs  types.rs
crates/unifly-api/src/integration/client/: firewall.rs
crates/unifly-api/src/integration/types/: inventory.rs  policy.rs
crates/unifly-api/src/legacy/: auth.rs  client.rs  clients.rs  mod.rs  session_cache.rs  sites.rs  stats.rs
crates/unifly-api/src/model/: client.rs  device.rs  entity_id.rs  firewall.rs  mod.rs  network.rs  session_resources.rs  supporting.rs
crates/unifly-api/src/session/: auth.rs  client.rs  devices.rs  firewallgroup.rs  mod.rs  models.rs  networkconf.rs  session_cache.rs  stats.rs  vpn.rs  wireguard.rs
crates/unifly-api/src/site_manager/: client.rs  mod.rs  types.rs
crates/unifly-api/src/store/: collection.rs  data_store.rs  mod.rs  refresh.rs
crates/unifly-api/tests/: controller_runtime_test.rs  integration_client_test.rs  legacy_client_test.rs  session_client_test.rs  site_manager_client_test.rs
crates/unifly-core/: Cargo.toml
crates/unifly-tui/: Cargo.toml
crates/unifly/src/: lib.rs  output.rs  sanitizer.rs
crates/unifly/src/cli/: args.rs  error.rs  output.rs
crates/unifly/src/cli/args/: api.rs  clients.rs  cloud.rs  common.rs  config.rs  devices.rs  firewall.rs  nat.rs  networks.rs  settings.rs  vpn.rs  wifi.rs
crates/unifly/src/cli/commands/: acl.rs  admin.rs  alarms.rs  api.rs  clients.rs  cloud.rs  config_cmd.rs  countries.rs  devices.rs  dns.rs  dpi.rs  events.rs  firewall.rs  hotspot.rs  mod.rs  nat.rs  networks.rs  radius.rs  settings.rs  sites.rs  stats.rs  system.rs  topology.rs  traffic_lists.rs  util.rs  vpn.rs  wans.rs  wifi.rs
crates/unifly/src/cli/commands/clients/: handler.rs  render.rs
crates/unifly/src/cli/commands/cloud/: fleet_devices.rs  fleet_sites.rs  hosts.rs  isp.rs  sdwan.rs  switch.rs
crates/unifly/src/cli/commands/config_cmd/: handler.rs  interactive.rs  support.rs
crates/unifly/src/cli/commands/devices/: handler.rs  render.rs
crates/unifly/src/cli/commands/firewall/: groups.rs  policies.rs  shared.rs  zones.rs
crates/unifly/src/cli/commands/util/: access.rs  filter.rs  io.rs  resolve.rs
crates/unifly/src/commands/: events.rs  firewall.rs
crates/unifly/src/config/: mod.rs  resolve.rs
crates/unifly/src/tui/: action.rs  app.rs  data_bridge.rs  effects.rs  mod.rs  screen.rs  theme.rs
crates/unifly/src/tui/app/: commands.rs  dispatch.rs  lifecycle.rs  navigation.rs  render.rs  screens.rs  stats.rs  wifi.rs
crates/unifly/src/tui/forms/: controller_profile.rs  mod.rs  widgets.rs
crates/unifly/src/tui/screens/: clients.rs  dashboard.rs  devices.rs  events.rs  firewall.rs  mod.rs  networks.rs  onboarding.rs  settings.rs  stats.rs  topology.rs  wifi.rs
crates/unifly/src/tui/screens/clients/: render.rs  state.rs
crates/unifly/src/tui/screens/clients/render/: detail.rs  table.rs
crates/unifly/src/tui/screens/dashboard/: state.rs
crates/unifly/src/tui/screens/dashboard/render/: traffic_chart.rs
crates/unifly/src/tui/screens/devices/: input.rs  render.rs  state.rs
crates/unifly/src/tui/screens/devices/render/: detail.rs  table.rs
crates/unifly/src/tui/screens/firewall/: input.rs  render.rs  state.rs
crates/unifly/src/tui/screens/networks/: input.rs  render.rs  state.rs
crates/unifly/src/tui/screens/networks/render/: detail.rs  edit.rs  table.rs
crates/unifly/src/tui/screens/onboarding/: input.rs  render.rs  state.rs
crates/unifly/src/tui/screens/onboarding/render/: chrome.rs  steps.rs
crates/unifly/src/tui/screens/settings/: input.rs  render.rs  state.rs
crates/unifly/src/tui/screens/settings/render/: form.rs
crates/unifly/src/tui/screens/stats/: render.rs  state.rs
crates/unifly/src/tui/screens/topology/: input.rs  render.rs  state.rs
crates/unifly/src/tui/screens/wifi/: input.rs  state.rs
crates/unifly/src/tui/screens/wifi/render/: mod.rs
crates/unifly/src/tui/widgets/: chart.rs  mod.rs
crates/unifly/src/tui/widgets/hyperchart/: axis.rs  bars.rs  block.rs  empty.rs  mod.rs  time_series.rs
crates/unifly/tests/: cli_test.rs  e2e_test.rs
docs/: config.toml  index.md  package.json  pnpm-lock.yaml  troubleshooting.md
docs/.vitepress/: config.ts
docs/architecture/: api-surface.md  crates.md  data-flow.md  index.md
docs/content/: _index.md  troubleshooting.md
docs/guide/: agents.md  authentication.md  configuration.md  index.md  installation.md  quick-start.md
docs/reference/: cli.md  library.md  tui.md
(+68 files in other folders)
