[package]
name = "unifly"
description = "CLI and TUI for managing UniFi network controllers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["unifi", "ubiquiti", "networking", "cli", "tui"]
categories = ["command-line-utilities", "network-programming"]
readme = "../../README.md"

[lints]
workspace = true

[features]
default = ["cli", "tui"]
cli = [
    "dep:clap_complete",
    "dep:miette",
    "dep:tabled",
    "dep:owo-colors",
    "dep:dialoguer",
    "dep:indicatif",
    "dep:rpassword",
    "dep:serde_yaml_ng",
]
tui = [
    "dep:opaline",
    "dep:ratatui",
    "dep:ratatui-macros",
    "dep:crossterm",
    "dep:tachyonfx",
    "dep:tui-input",
    "dep:tui-scrollview",
    "dep:tui-widget-list",
    "dep:tui-tree-widget",
    "dep:tui-popup",
    "dep:throbber-widgets-tui",
    "dep:color-eyre",
    "dep:better-panic",
    "dep:human-panic",
    "dep:tracing-appender",
    "dep:bytesize",
    "dep:humantime",
    "dep:indexmap",
    "dep:futures",
    "dep:tokio-util",
]
e2e = []

[[bin]]
name = "unifly"
path = "src/bin/cli.rs"
required-features = ["cli"]

# ── Shared dependencies (always present) ─────────────────────────
[dependencies]
unifly-api         = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }
secrecy            = { workspace = true }
thiserror          = { workspace = true }
url                = { workspace = true }

# Config deps (shared by CLI and TUI)
figment            = { workspace = true }
toml               = { workspace = true }
keyring            = { workspace = true }
directories        = { workspace = true }

# Demo mode sanitization
regex              = { workspace = true }
dashmap            = { workspace = true }

# ── CLI-only deps (optional) ─────────────────────────────────────
clap_complete      = { workspace = true, optional = true }
miette             = { workspace = true, optional = true }
tabled             = { workspace = true, optional = true }
owo-colors         = { workspace = true, optional = true }
dialoguer          = { workspace = true, optional = true }
indicatif          = { workspace = true, optional = true }
rpassword          = { workspace = true, optional = true }
serde_yaml_ng      = { workspace = true, optional = true }

# ── TUI-only deps (optional) ─────────────────────────────────────
opaline            = { workspace = true, optional = true }
ratatui            = { workspace = true, optional = true }
ratatui-macros     = { workspace = true, optional = true }
crossterm          = { workspace = true, optional = true }
tachyonfx          = { workspace = true, optional = true }
tui-input          = { workspace = true, optional = true }
tui-scrollview     = { workspace = true, optional = true }
tui-widget-list    = { workspace = true, optional = true }
tui-tree-widget    = { workspace = true, optional = true }
tui-popup          = { workspace = true, optional = true }
throbber-widgets-tui = { workspace = true, optional = true }
color-eyre         = { workspace = true, optional = true }
better-panic       = { workspace = true, optional = true }
human-panic        = { workspace = true, optional = true }
tracing-appender   = { workspace = true, optional = true }
bytesize           = { workspace = true, optional = true }
humantime          = { workspace = true, optional = true }
indexmap            = { workspace = true, optional = true }
futures            = { workspace = true, optional = true }
tokio-util         = { workspace = true, optional = true }
json_comments = "0.2.2"

[build-dependencies]
clap               = { workspace = true }
clap_complete      = { workspace = true }
clap_mangen        = { workspace = true }

[dev-dependencies]
assert_cmd         = { workspace = true }
predicates         = { workspace = true }
insta              = { workspace = true }
tempfile           = { workspace = true }
wiremock           = { workspace = true }
tokio              = { workspace = true, features = ["test-util"] }
pretty_assertions  = { workspace = true }
uuid               = { workspace = true }

[package.metadata.dist]
dist = true
